handful of alignment fixes

--- a/app/assets/stylesheets/common/base/header.scss
+++ b/app/assets/stylesheets/common/base/header.scss
@@ -236,6 +236,11 @@
     margin: 5px;
     padding: 5px;
   }
+
+  .search-context {
+    padding: 0 5px;
+  }
+
   .searching {
     display: block;
     position: absolute;
